refactor: ensure truncated overflows

--- a/packages/elements/src/components/ino-nav-item/ino-nav-item.scss
+++ b/packages/elements/src/components/ino-nav-item/ino-nav-item.scss
@@ -30,7 +30,12 @@ ino-nav-item {
     color: var(--nav-item-color);
     @include typography.typo(label-l);
 
+    &__text {
+      display: block !important;
+    }
+
     &__secondary-text {
+      display: block !important;
       @include typography.typo(label-l);
     }
 
