--- a/packages/elements-angular-example/src/app/app.component.html
+++ b/packages/elements-angular-example/src/app/app.component.html
@@ -1,48 +1,99 @@
-<div class="header-h1">Simple ToDo</div>
-
-<form class="app-wrapper" [formGroup]="form">
-  <div class="action-box">
-    <ino-input
-      formControlName="todoName"
-      type="text"
-      placeholder="What needs to be done..."
-      (keyup.enter)="add()"
-    >
-      <ino-icon
-        clickable="true"
-        (clickEl)="add()"
-        slot="icon-trailing"
-        icon="add"
-      ></ino-icon>
-    </ino-input>
+<ino-nav-drawer
+  class="customizable-drawer"
+  [open]="isMenuOpen"
+  anchor="left"
+  variant="docked"
+  (openChange)="onOpenChange($event)"
+>
+  <div slot="header">
+    <ino-img
+      slot="logo"
+      width="22"
+      height="31"
+      alt="inovex Elements Logo"
+      src="https://elements.inovex.de/version/v9.1.0/assets/elements-677dc54a.svg"
+    ></ino-img>
+    <p>inovex Elements</p>
   </div>
-
-  <ino-list>
-    <ino-list-item *ngFor="let todo of todos; index as i" [text]="todo.name">
-      <ino-checkbox slot="leading" (click)="delete(todo)"></ino-checkbox>
-      <ino-button
-        variant="outlined"
-        dense="true"
-        slot="trailing"
-        (click)="delete(todo)"
-        >Delete</ino-button
-      >
-    </ino-list-item>
+  <ino-list role="menubar" slot="content" aria-label="Main Navigation">
+    <ino-nav-item role="menuitem" text="Home">
+      <ino-icon icon="home"></ino-icon>
+      <ino-tooltip *ngIf="!isMenuOpen">Home</ino-tooltip>
+    </ino-nav-item>
+    <ino-nav-item role="menuitem" text="Discover">
+      <ino-icon icon="discover"></ino-icon>
+      <ino-tooltip *ngIf="!isMenuOpen">Discover</ino-tooltip>
+    </ino-nav-item>
+    <ino-nav-item role="menuitem" text="First Steps">
+      <ino-icon icon="first_steps"></ino-icon>
+      <ino-tooltip *ngIf="!isMenuOpen">First Steps</ino-tooltip>
+    </ino-nav-item>
+    <ino-nav-item role="menuitem" text="Library">
+      <ino-icon icon="library"></ino-icon>
+      <ino-tooltip *ngIf="!isMenuOpen">Library</ino-tooltip>
+    </ino-nav-item>
+    <ino-nav-item role="menuitem" text="About Us">
+      <ino-icon icon="employee"></ino-icon>
+      <ino-tooltip *ngIf="!isMenuOpen">About Us</ino-tooltip>
+    </ino-nav-item>
+  </ino-list>
+  <ino-list role="menubar" slot="footer" aria-label="Footer Navigation">
+    <ino-nav-item role="menuitem" text="Contact">
+      <ino-icon icon="message"></ino-icon>
+    </ino-nav-item>
   </ino-list>
 
-  <ino-markdown-editor
-    formControlName="todoText"
-    (viewModeChange)="onViewModeChange($event)"
-    [viewMode]="mode"
-    [initialValue]="myText"
-  ></ino-markdown-editor>
-</form>
+  <main slot="app" class="main-content">
+    <h1>Simple ToDo</h1>
 
-<div class="btn-box">
-  <ino-button (click)="toggleInputState()"
-    >{{
-      this.form.controls['todoName'].disabled ? 'Enable' : 'Disable'
-    }}
-    Input</ino-button
-  >
-</div>
+    <form class="app-wrapper" [formGroup]="form">
+      <div class="action-box">
+        <ino-input
+          formControlName="todoName"
+          type="text"
+          placeholder="What needs to be done..."
+          (keyup.enter)="add()"
+        >
+          <ino-icon
+            clickable="true"
+            (clickEl)="add()"
+            slot="icon-trailing"
+            icon="add"
+          ></ino-icon>
+        </ino-input>
+      </div>
+
+      <ino-list>
+        <ino-list-item
+          *ngFor="let todo of todos; index as i"
+          [text]="todo.name"
+        >
+          <ino-checkbox slot="leading" (click)="delete(todo)"></ino-checkbox>
+          <ino-button
+            variant="outlined"
+            dense="true"
+            slot="trailing"
+            (click)="delete(todo)"
+            >Delete</ino-button
+          >
+        </ino-list-item>
+      </ino-list>
+
+      <ino-markdown-editor
+        formControlName="todoText"
+        (viewModeChange)="onViewModeChange($event)"
+        [viewMode]="mode"
+        [initialValue]="myText"
+      ></ino-markdown-editor>
+    </form>
+
+    <div class="btn-box">
+      <ino-button (click)="toggleInputState()"
+        >{{
+          this.form.controls['todoName'].disabled ? 'Enable' : 'Disable'
+        }}
+        Input</ino-button
+      >
+    </div>
+  </main>
+</ino-nav-drawer>
