--- a/packages/storybook/src/stories/ino-nav-menu/ino-nav-menu.scss
+++ b/packages/storybook/src/stories/ino-nav-menu/ino-nav-menu.scss
@@ -1,30 +1,13 @@
-// select storybook page for ino-nav-menu
-.sbdocs.sbdocs-content:has(#story--structure-ino-nav-menu--default--primary) {
+.menu {
+  position: fixed;
+  right: 0;
+  top: 0;
+}
 
-  // select wrapper for every ino-nav-menu story
-  // max-height is needed to show stickyness of ino-nav-menu
-  [scale] {
-    width: 100%;
-    max-height: 250px;
-  }
+.sections {
+  width: 60%;
 
-  [scale]:has(.show-full-height) {
-    max-height: unset;  
-  }
-  
-  [scale] #root-inner {
-    position: relative;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    align-items: stretch;
-    gap: 50px;
-  }
-
-  [scale] aside {
-    ino-nav-menu {
-      display: flex;
-      width: 150px;
-    }
+  .section {
+    height: 90vh;
   }
 }
