feat: create footer pattern

--- a/packages/elements/src/global/styles.scss
+++ b/packages/elements/src/global/styles.scss
@@ -4,13 +4,13 @@
 
 .inovex-elements-typo {
   font-family: Lato, Verdana, sans-serif;
-
-  a {
-    background-color: transparent;
-    color: new-theme.$primary;
-    font-weight: bold;
-    text-decoration: none;
-  }
+  /*too oppressive, users cannot override this when using the elements theme?*/
+  // a {
+  //   background-color: transparent;
+  //   color: new-theme.$primary;
+  //   font-weight: bold;
+  //   text-decoration: none;
+  // }
 
   /************ Displays ************/
 
