migrate getting-started to apps router

--- a/packages/landingpage/app/[lang]/getting-started/components/layout.module.scss
+++ b/packages/landingpage/app/[lang]/getting-started/components/layout.module.scss
@@ -98,3 +98,15 @@
   opacity: 0;
   transition: opacity 300ms;
 }
+
+.mdx-content h1 {
+  font-size: 40px;
+}
+
+.mdx-content h2 {
+  margin-top: 80px;
+}
+
+.mdx-content p {
+  line-height: 25px;
+}
