refactor(elements/ino-snackbar): put checkmark icon back

--- a/packages/elements/src/components/ino-snackbar/ino-snackbar.scss
+++ b/packages/elements/src/components/ino-snackbar/ino-snackbar.scss
@@ -124,6 +124,10 @@ ino-snackbar {
     width: 30px;
     color: var(--snackbar-color);
     font-weight: 700;
+
+    ino-icon.ino-snackbar-icon {
+      --ino-icon-color-primary: var(--snackbar-color);
+    }
   }
 
   @include setIconSizeByType(info, 20px);
