implement PR review suggestions

--- a/packages/elements/src/components/ino-snackbar/ino-snackbar.scss
+++ b/packages/elements/src/components/ino-snackbar/ino-snackbar.scss
@@ -82,7 +82,7 @@ ino-snackbar {
   }
 
   .ino-snackbar-close-btn {
-    display: inline-block;
+    display: flex;
     position: absolute;
     top: 0;
     right: 0;
