feat(ui-patterns): add footer & hero pattern (#1310)
* feat: add hero section pattern draft WIP

* refactor: classNames

* feat: create footer pattern

* refactor: add dashed outline to patterns instead

* refactor: deploy ui-patterns

* feat: add footer & hero pattern to landingpage

--- a/packages/elements/src/global/styles.scss
+++ b/packages/elements/src/global/styles.scss
@@ -4,8 +4,7 @@
 
 .inovex-elements-typo {
   font-family: Lato, Verdana, sans-serif;
-
-  a {
+  a:not(.tailwind) {
     background-color: transparent;
     color: new-theme.$primary;
     font-weight: bold;
