feat(elements/ino-snackbar): improve accessibility (#1200)
* feat(elements|ino-snackbar): improve accessibility for all snackbar variants

* feat(elements|ino-snackbar): improve accessibility for all snackbar variants

* fix(elements|ino-snackbar): format

* feat(elements|ino-snackbar): refactor role property and use ino-button dense version

* feat(elements|ino-snackbar): adjust label documentation

* feat(elements|ino-snackbar): fix format

* feat(elements|ino-snackbar): revert ino button

* implement PR review suggestions

* remove property snackbarRole

* style: decrease margin action to text

---------

Co-authored-by: Sl1nd <sven.lindauer@inovex.de>
Co-authored-by: Benjamin Pagelsdorf <bpagelsdorf@inovex.de>
Co-authored-by: Jan-Niklas <jan-niklas.voss@inovex.de>

--- a/packages/elements/src/components/ino-snackbar/ino-snackbar.scss
+++ b/packages/elements/src/components/ino-snackbar/ino-snackbar.scss
@@ -35,10 +35,6 @@ $snackbar-color-map-by-type: (
   }
 }
 
-@mixin showCloseButton() {
-  display: inline-flex;
-}
-
 ino-snackbar {
   /**
   * @prop --ino-snackbar-top: Distance to the top edge
@@ -79,10 +75,6 @@ ino-snackbar {
     max-width: 350px;
     padding: 16px 45px 16px 25px;
 
-    &:hover ~ .ino-snackbar-close-btn {
-      @include showCloseButton;
-    }
-
     // mdc pseudo-element blocks interaction
     &:before {
       display: none;
@@ -90,7 +82,7 @@ ino-snackbar {
   }
 
   .ino-snackbar-close-btn {
-    display: none;
+    display: flex;
     position: absolute;
     top: 0;
     right: 0;
@@ -105,10 +97,6 @@ ino-snackbar {
     --ino-icon-button-icon-color: black !important;
     --ino-icon-button-size: 22px;
     --ino-icon-button-icon-size: 8px;
-
-    &:hover {
-      @include showCloseButton;
-    }
   }
 
   .ino-snackbar-icon-container {
@@ -136,6 +124,10 @@ ino-snackbar {
 
     .ino-snackbar-text-container {
       color: #74758b;
+    }
+
+    .ino-snackbar-action-container {
+      margin-top: 0.25rem;
     }
 
     .ino-snackbar-action-btn {
