--- a/packages/elements/src/components/ino-snackbar/ino-snackbar.scss
+++ b/packages/elements/src/components/ino-snackbar/ino-snackbar.scss
@@ -5,7 +5,7 @@
 @use '../base/new-theme' as theme;
 @use '../base/animation';
 
-$snackbar-types: 'info', 'error', 'success';
+$snackbar-types: 'info', 'error', 'success', 'warning';
 
 $snackbar-color-map-by-type: (
   info: (
@@ -19,6 +19,10 @@ $snackbar-color-map-by-type: (
   success: (
     color: #{theme.$success},
     color-light: #{theme.$success-light},
+  ),
+  warning: (
+    color: #{theme.$warning},
+    color-light: #{theme.$warning-light},
   ),
 );
 
@@ -106,6 +110,8 @@ ino-snackbar {
     align-items: center;
     height: 30px;
     width: 30px;
+    color: var(--snackbar-color);
+    font-weight: 700;
 
     ino-icon.ino-snackbar-icon {
       --ino-icon-color-primary: var(--snackbar-color);
