--- a/packages/storybook/src/stories/utils.scss
+++ b/packages/storybook/src/stories/utils.scss
@@ -1,3 +1,7 @@
+/**
+ * Applies styling to the container of a story.
+ * The styling is encapsulated within this mixin because the ID may change in the future.
+ */
 @mixin story-container {
   #root-inner {
     @content;
