--- a/packages/storybook/src/stories/ino-button/ino-button.scss
+++ b/packages/storybook/src/stories/ino-button/ino-button.scss
@@ -1,5 +1,7 @@
+@import '../utils';
+
 #story--buttons-ino-button--leading-and-trailing-icon-inner {
-  #root-inner {
+  @include story-container {
     display: flex;
     column-gap: 20px;
   }
