--- a/packages/storybook/src/stories/ino-fab-set/ino-fab-set.scss
+++ b/packages/storybook/src/stories/ino-fab-set/ino-fab-set.scss
@@ -1,3 +1,5 @@
+@import '../utils';
+
 // only selects Stories of ino-fab-set without decorating stories with wrapper classes
 .sbdocs.sbdocs-content:has(#anchor--buttons-ino-fab-set--default) {
   [scale] {
@@ -5,7 +7,7 @@
   }
 }
 
-#root-inner {
+@include story-container {
   min-width: 10px;
   min-height: 10px;
 }
