--- a/packages/storybook/src/stories/ino-popover/ino-popover.scss
+++ b/packages/storybook/src/stories/ino-popover/ino-popover.scss
@@ -1,3 +1,5 @@
+@import '../utils';
+
 .sbdocs.sbdocs-content:has(#anchor--notification-ino-popover--default) {
   [scale] {
     width: 100%;
@@ -16,7 +18,7 @@
     .innerZoomElementWrapper > div > div {
       overflow: unset;
 
-      #root-inner {
+      @include story-container {
         display: flex;
         gap: 5px;
       }
