--- a/packages/storybook/src/stories/ino-nav-menu/ino-nav-menu.scss
+++ b/packages/storybook/src/stories/ino-nav-menu/ino-nav-menu.scss
@@ -1,3 +1,10 @@
+@import "../utils";
+
+@include story-container {
+  overflow: auto;
+  max-height: 500px;
+}
+
 .menu {
   position: fixed;
   right: 0;
