fix(ui-patterns-playground): tailwind styles not being integrated

--- a/packages/ui-patterns-playground/src/index.css
+++ b/packages/ui-patterns-playground/src/index.css
@@ -1,9 +1,9 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-
 @import '@inovex.de/elements/dist/inovex-elements/inovex-elements.css';
 @import '@inovex.de/ui-patterns/dist/style.css';
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 #root {
   height: 100vh;
