--- a/packages/elements/src/components/ino-chip/ino-chip.scss
+++ b/packages/elements/src/components/ino-chip/ino-chip.scss
@@ -40,6 +40,9 @@ ino-chip {
     transition: ease-in-out 0.15s;
 
     .ino-chip-leading-icon {
+      display: flex;
+      justify-content: center;
+
       --ino-icon-width: #{$icon-size};
       --ino-icon-height: #{$icon-size};
     }
