--- a/packages/storybook/src/stories/ino-button/ino-button.scss
+++ b/packages/storybook/src/stories/ino-button/ino-button.scss
@@ -1,6 +1,9 @@
 @import '../utils';
 
-#root-inner {
-  display: flex;
-  gap: 25px;
+#story--buttons-ino-button--leading-and-trailing-icon-inner {
+  @include story-container {
+    display: flex;
+    justify-content: center;
+    column-gap: 20px;
+  }
 }
