--- a/packages/storybook/src/stories/ino-button/ino-button.scss
+++ b/packages/storybook/src/stories/ino-button/ino-button.scss
@@ -3,6 +3,7 @@
 #story--buttons-ino-button--leading-and-trailing-icon-inner {
   @include story-container {
     display: flex;
+    justify-content: center;
     column-gap: 20px;
   }
 }
