ensure full container width

--- a/packages/elements/src/components/ino-nav-drawer/ino-nav-drawer.scss
+++ b/packages/elements/src/components/ino-nav-drawer/ino-nav-drawer.scss
@@ -35,6 +35,7 @@
 
   .mdc-drawer-app-content {
     height: 100%;
+    width: 100%;
     overflow: auto;
     flex: auto;
     transition-property: margin;
